k8s/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    io.kompose.service: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: keycloak
    spec:
      containers:
        - name: petra-keycloak
          image: petra-keycloak:26.0-pg-theme
          imagePullPolicy: IfNotPresent
          args:
            - start
            - --http-enabled=true
            - --http-port=8080
            - --proxy-headers=xforwarded
            - --hostname-strict=false
            - --spi-theme-cache-themes=false
            - --spi-theme-cache-templates=false
          ports:
            - containerPort: 8080
              protocol: TCP
