k8s/openldap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: openldap
  name: openldap
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: openldap
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: openldap
    spec:
      containers:
        - name: petra-openldap
          image: osixia/openldap:1.5.0
          ports:
            - containerPort: 389
              protocol: TCP
            - containerPort: 636
              protocol: TCP
          volumeMounts:
            # persistent DB
            - name: openldap-data
              mountPath: /var/lib/ldap

            # writable bootstrap (hasil copy dari initContainer)
            - name: openldap-bootstrap-schema
              mountPath: /container/service/slapd/assets/config/bootstrap/schema/custom
            - name: openldap-bootstrap-ldif
              mountPath: /container/service/slapd/assets/config/bootstrap/ldif/custom

      volumes:
        - name: openldap-data
          persistentVolumeClaim:
            claimName: openldap-data

        # sumber read-only dari configmap
        - name: openldap-cm2
          configMap:
            name: openldap-cm2
        - name: openldap-cm3
          configMap:
            name: openldap-cm3

        # target writable untuk bootstrap
        - name: openldap-bootstrap-schema
          emptyDir: {}
        - name: openldap-bootstrap-ldif
          emptyDir: {}
