k8s/keycloak-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-nodeport
spec:
  type: NodePort
  selector:
    io.kompose.service: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30081
