k8s/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.all.yml -o k8s/
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8080
  selector:
    io.kompose.service: keycloak
