k8s/my-ldap-portal-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-ldap-apache
  namespace: my-ldap
  labels:
    app: my-ldap-apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-ldap-apache
  template:
    metadata:
      labels:
        app: my-ldap-apache
    spec:
      containers:
        - name: my-ldap-apache
          image: my-ldap-portal:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: my-ldap-apache
  namespace: my-ldap
spec:
  type: ClusterIP
  selector:
    app: my-ldap-apache
  ports:
    - name: http
      port: 8080
      targetPort: 80
      protocol: TCP
