k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    io.kompose.service: postgres
spec:
  selector:
    io.kompose.service: postgres
  ports:
    - name: pg
      port: 5432
      targetPort: 5432
  type: ClusterIP
