k8s/my-ldap-portal-saml-live.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-ldap-portal
  namespace: my-ldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-ldap-portal
  template:
    metadata:
      labels:
        app: my-ldap-portal
    spec:
      containers:
        - name: my-ldap-portal
          image: docker.io/library/my-ldap-portal:saml-v14
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /login
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /login
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6
---
apiVersion: v1
kind: Service
metadata:
  name: my-ldap-portal
  namespace: my-ldap
spec:
  type: NodePort
  selector:
    app: my-ldap-portal
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30090
      protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ldap-ingress
  namespace: my-ldap
spec:
  ingressClassName: public
  tls:
    - hosts:
        - my-ldap.ppsi.petra.ac.id
      secretName: my-ldap-tls
  rules:
    - host: my-ldap.ppsi.petra.ac.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-ldap-portal
                port:
                  number: 80
